	  and do_int_spell_fix(). (DLR)
- browser.c:
  do_browser()
	- Properly set currshortcut back to the file browser shortcut
	  list after a "Go To Directory" prompt, and properly restore
	  the file list display after returning from the help browser at
	  the "Go To Directory" prompt. (DLR)
	- Rename variable j to i, for consistency. (DLR)
- chars.c:
  mbstrchr()
	- Make parameter c const. (DLR)
- files.c:
  do_writeout()
	- Remove unneeded setting of currshortcut. (DLR)
  is_dir()
	- Rename parameter ret to retval, for consistency. (DLR)
- global.c:
  shortcut_init()
	- Remove erroneous handling of the "Get Help" shortcut in the
	  file browser shortcut list. (DLR)
- prompt.c:
  get_prompt_string()
	- Redraw the prompt and set finished to FALSE when NANO_HELP_KEY
	  is pressed, so that we don't leave the prompt, enter the help
	  browser, and restart the prompt after leaving it.  This will
	  properly preserve the cursor position after doing the last of
	  these. (DLR)
- utils.c:
  ngetdelim()
	- Do sanity checks manually again instead of in an assert, and
	  set errno to EINVAL as well as return -1 if they fail.  This
	  matches the manual page. (DLR)
- winio.c:
  get_key_buffer()
	- If we fail to get a character over MAX_BUF_SIZE times in a
	  row, hang up regardless of the value of errno.  This fixes a
	  problem where nano doesn't terminate properly under xterm if
	  the user su's to root, runs nano, and then closes the terminal
	  window.  errno isn't set properly to EIO then. (DLR, found by
	  John <acocaracha@gmail.com>)
  parse_kbinput()
	- Interpret Shift-Begin, Shift-Delete, Shift-End, Shift-Home,
	  Shift-Insert, and Shift-Suspend as Begin, Delete, End, Home,
	  Insert, and Suspend, respectively, regardless of whether
	  --rebindkeypad is used. (DLR, found by David Benbennick)
  edit_redraw()
	- If either current or old_current is offscreen, we're not on
	  the first page, and/or we're not on the same page as before,